# marketplace-erp-tui

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cross-compiling/: i686-pc-mingw.cmake
file-services/configurationservice/: ConfigurationService.h
file-services/csv-file-service/: CsvFileService.cpp  CsvFileService.h
models/client/: Client.cpp
models/order/: Order.cpp  Order.h
models/property/: Property.h
public-entities/category/: Category.cpp  Category.h
public-entities/client/: Client.cpp  Client.h
public-entities/order/: Order.cpp  Order.h
public-entities/product/: Product.cpp  Product.h
public-entities/supplier/: Supplier.cpp  Supplier.h
repositories/client-repository/: ClientRepository.cpp
repositories/order-repository/: OrderRepository.cpp  OrderRepository.h
repositories/products-repository/: ProductsRepository.h
src/file-services/configuration-service/: ConfigurationService.cpp  ConfigurationService.h
src/file-services/csv-file-service/: CsvFileService.cpp  CsvFileService.h
src/models/client/: Client.cpp  Client.h
src/models/order/: Order.cpp  Order.h
src/models/product/: Product.cpp  Product.h
src/models/property/: Property.cpp  Property.h
src/program-launcher/: ProgramLauncher.cpp  ProgramLauncher.h
src/program-launcher/dialogues/client-dialog/: ClientDialog.cpp  ClientDialog.h
src/program-launcher/dialogues/client-dialog/client-adding-dialog/: ClientAddingDialog.cpp  ClientAddingDialog.h
src/program-launcher/dialogues/orders-dialog/: OrdersDialog.cpp  OrdersDialog.h
src/program-launcher/dialogues/orders-dialog/order-adding-dialog/: OrderAddingDialog.cpp  OrderAddingDialog.h
src/repositories/client-repository/: ClientRepository.cpp  ClientRepository.h
src/repositories/order-repository/: OrderRepository.cpp  OrderRepository.h
src/repositories/products-repository/: ProductsRepository.cpp  ProductsRepository.h
src/table-printer/: TablePrinter.cpp  TablePrinter.h
src/utils/: Utils.cpp  Utils.h
table-printer/: TablePrinter.cpp  TablePrinter.h
tests/: CMakeLists.txt  ClientRepositoryTest.h  ConfigurationServiceTest.h  CsvFileServiceTest.h  OrderRepositoryTest.h  ProductsRepositoryTest.h  SupplierRepositoryTest.h  TablePrinterTest.h  main.cpp
utils/csvfileservice/: CsvFileService.cpp  CsvFileService.h
utils/csvfileservices/configurationservice/: ConfigurationService.cpp  ConfigurationService.h
utils/csvfileservices/csvfileservice/: CsvFileService.cpp  CsvFileService.h
utils/csvfileservices/supplierrepository/: SupplierRepository.cpp  SupplierRepository.h
utils/property/: Property.cpp
utils/repositories/client-repository/: ClientRepository.cpp  ClientRepository.h
utils/repositories/order-repository/: OrderRepository.cpp  OrderRepository.h
utils/repositories/products-repository/: ProductsRepository.cpp  ProductsRepository.h
utils/repositories/supplier-repository/: SupplierRepository.h
